[package]
name = "tftp"
version = "0.2.0"
authors = ["9506hqwy"]
edition = "2021"
rust-version = "1.60"
repository = "https://github.com/9506hqwy/tftp-rs"
license = "MIT OR Apache-2.0"
keywords = ["rfc1350", "rfc2347", "rfc2348", "rfc2349", "rfc7440"]
categories = ["network-programming"]

[dependencies]
bytes = "1.5.0"
log = "0.4.21"

[dependencies.tokio]
version = "1.36.0"
features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"]

[dev-dependencies]
clap = "4.5.3"
env_logger = "0.11.2"

[[example]]
name = "tftp"

[[example]]
name = "tftpd"

[profile.release]
strip = "symbols"
lto = true
